// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination renders: disable next 1`] = `
<ul
  class="jun-pagination"
  unselectable="unselectable"
>
  <li
    class="jun-pagination-page"
  >
    页码: 2
  </li>
  <li
    aria-disabled="false"
    class="jun-pagination-prev"
  >
    上一页
  </li>
  <li
    aria-disabled="true"
    class="jun-pagination-disabled jun-pagination-next"
  >
    下一页
  </li>
</ul>
`;

exports[`Pagination renders: disable prev 1`] = `
<ul
  class="jun-pagination"
  unselectable="unselectable"
>
  <li
    class="jun-pagination-page"
  >
    页码: 1
  </li>
  <li
    aria-disabled="true"
    class="jun-pagination-disabled jun-pagination-prev"
  >
    上一页
  </li>
  <li
    aria-disabled="false"
    class="jun-pagination-next"
  >
    下一页
  </li>
</ul>
`;

exports[`Pagination renders: disable prev and next 1`] = `
<ul
  class="jun-pagination"
  unselectable="unselectable"
>
  <li
    class="jun-pagination-page"
  >
    页码: 1
  </li>
  <li
    aria-disabled="true"
    class="jun-pagination-disabled jun-pagination-prev"
  >
    上一页
  </li>
  <li
    aria-disabled="true"
    class="jun-pagination-disabled jun-pagination-next"
  >
    下一页
  </li>
</ul>
`;

exports[`Pagination renders: disabled 1`] = `
<ul
  class="jun-pagination"
  unselectable="unselectable"
>
  <li
    class="jun-pagination-page"
  >
    页码: 1
  </li>
  <li
    aria-disabled="true"
    class="jun-pagination-disabled jun-pagination-prev"
  >
    上一页
  </li>
  <li
    aria-disabled="true"
    class="jun-pagination-disabled jun-pagination-next"
  >
    下一页
  </li>
  <li
    class="jun-pagination-options"
  >
    <select
      aria-disabled="true"
      disabled=""
    >
      <option
        selected=""
        value="10"
      >
        10条/页
      </option>
      <option
        value="20"
      >
        20条/页
      </option>
      <option
        value="30"
      >
        30条/页
      </option>
      <option
        value="40"
      >
        40条/页
      </option>
    </select>
  </li>
  <li
    class="jun-pagination-jumper"
  >
    跳至
    <input
      aria-disabled="true"
      disabled=""
      type="text"
      value=""
    />
    页
  </li>
</ul>
`;

exports[`Pagination renders: error page 1`] = `
<ul
  class="jun-pagination"
  unselectable="unselectable"
>
  <li
    class="jun-pagination-page"
  >
    页码: -1
  </li>
  <li
    aria-disabled="true"
    class="jun-pagination-disabled jun-pagination-prev"
  >
    上一页
  </li>
  <li
    aria-disabled="false"
    class="jun-pagination-next"
  >
    下一页
  </li>
</ul>
`;

exports[`Pagination renders: showQuickJumper, showSizeChanger 1`] = `
<ul
  class="jun-pagination"
  unselectable="unselectable"
>
  <li
    class="jun-pagination-page"
  >
    页码: 1
  </li>
  <li
    aria-disabled="true"
    class="jun-pagination-disabled jun-pagination-prev"
  >
    上一页
  </li>
  <li
    aria-disabled="false"
    class="jun-pagination-next"
  >
    下一页
  </li>
  <li
    class="jun-pagination-options"
  >
    <select
      aria-disabled="false"
    >
      <option
        selected=""
        value="10"
      >
        10条/页
      </option>
      <option
        value="20"
      >
        20条/页
      </option>
      <option
        value="30"
      >
        30条/页
      </option>
      <option
        value="40"
      >
        40条/页
      </option>
    </select>
  </li>
  <li
    class="jun-pagination-jumper"
  >
    跳至
    <input
      aria-disabled="false"
      type="text"
      value=""
    />
    页
  </li>
</ul>
`;
